styles/site.less
@generic-foreground-color: #fff;
@generic-background-color: #f2f2f2;
html,
body {
  background-color: @generic-background-color;
  color: @generic-foreground-color;
}

@generic-dark-color: #333;
@smarty-font: "Helvetica Neue",
Helvetica,
Arial,
sans-serif;
label,
p {
  color: @generic-dark-color;
  font-family: @smarty-font;
}

@medium-font-size: 15pt;
.species-selected {
  padding: 10px;
  border-radius: 15px;
  margin-top: 0;
  padding-top: 2px;
  padding-bottom: 2px;
  margin-right: 5px;
  margin-bottom: 15px;
  font-size: @medium-font-size;
  font-family: @smarty-font;
  color: initial;
  background-color: #DDD;
}

@explanation-font-size: 9.5pt;
.explanation-text {
  font-size: @explanation-font-size;
}

.container-fluid {
  padding-top: 15px;
}

.scrollable-content {
  overflow-y: auto;
}

@main-row-height: 300px;
.tall-object {
  height: @main-row-height;
  &.listing {
    height: initial;
    max-height: @main-row-height;
  }
}

@short-row-height: 120px;
.short-object {
  height: @short-row-height;
}

nav.navbar.navbar-default {
  margin-bottom: 0px;
}

.spaced {
  margin-top: 15px;
}

// outlines are tacky
a,
button {
  outline: none !important;
}

@small-font-size: 8pt;
.parameter-label {
  font-size: @small-font-size;
}

.row:after, .row:before {
  content: none !important;
}

.advanced-options {
  display: flex;
  flex-direction: column;
}

@params-margin: 10px;
.params-holder {
  justify-content: space-around;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin: 0px;
  padding: 0px;
  & > * {
    margin: 5px;
  }
}

@standard-border-radius: 5px;
// @big-button-width: 30%;
@standard-box-shadow: 10px 10px 10px -7px rgba(0, 0, 0, 0.75);
@dark-border: 1px solid #555;
.display-item {
  // generic display
  margin-bottom: 10px;
  margin-right: 5px;
  border-radius: @standard-border-radius;
  box-shadow: @standard-box-shadow;
  // inner arrangement
  display: flex;
  flex-direction: column;
  // list group
  .list-group {
    border-top-left-radius: 0;
    border-bottom-right-radius: 0;
    .list-group-item {
      border-top-left-radius: 0;
      border-top-right-radius: 0;
    }
    .scrollable-content;
    margin-bottom: 4px;
  }
  // gross hack for cancel button
  .input-group {
    // make the corners line up
    input:not(.num) {
      border-bottom: @dark-border;
      border-radius: @standard-border-radius 0 0 0;
    }
    button.btn {
      border-radius: 0;
      border-top-right-radius: @standard-border-radius;
    }
  }
  // panel display
  .panel {
    height: 100%;
    margin-bottom: 0;
    // flex display
    display: flex;
    flex-direction: column;
    .panel-heading {
      display: flex;
      justify-content: space-between;
      flex-wrap: wrap;
      & > p {
        flex-grow: 5;
      }
      .btn-group {
        display: flex;
        flex-direction: row;
        button {
          flex-shrink: 1;
        }
      }
    }
    .panel-body {
      flex-grow: 1;
      textarea {
        height: 100%;
      }
    }
  }
}

.more-padding {
  padding-left: 30px;
  padding-right: 25px;
}

@top-button-gradient: white;
@bottom-button-gradient: rgba(226, 226, 226, .3);
.option-pane {
  background-color: transparent;
  display: flex;
  flex-direction: column;
  border-radius: @standard-border-radius;
  .row {
    flex-direction: row;
    display: flex;
    justify-content: space-between;
    padding-bottom: 10px;
  }
  .option-box {
    height: 100%;
    border: 1px solid #d7dada;
    border-radius: @standard-border-radius;
    padding: 10px 10px 10px 10px;
    background-image: linear-gradient( to bottom, @top-button-gradient, @bottom-button-gradient);
    // flex props
    flex-grow: 1;
    display: flex;
    flex-direction: column;
  }
}

input[type=checkbox] {
  display: none;
}

input[type=checkbox] + label:before {
  font-family: FontAwesome;
  display: inline-block;
}

// letter-spacing is because the check mark moves around
input[type=checkbox] + label:before {
  letter-spacing: 5px;
  content: "\f096";
}

input[type=checkbox]:checked + label:before {
  letter-spacing: 3px;
  content: "\f046";
}

// line up with checkbox
@small-padding-distance: 22px;
.options-box {
  display: flex;
  justify-content: space-between;
  padding-right: @small-padding-distance;
  padding-left: @small-padding-distance;
}

textarea {
  .scrollable-content;
  resize: none;
}

@panel-color: #f5f5f5;
// remove bootstrap's default styling, gradients look tacky
.panel .panel-heading,
button.btn.btn-default {
  background-image: none;
  background-color: @panel-color;
}

@first-button-padding: 10px;
button.navbar-btn:last-child {
  margin-left: @first-button-padding;
}

// this makes the links on a diff line than the brand on chrome
.navbar-brand {
  float: none !important;
}

.navbar-btn {
  margin-bottom: 10px;
}

